# brisk-menu

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  gen_authors.sh  meson.build  meson_post_install.sh  mkrelease.sh  next_notes
.tx/: config
data/: brisk.gresource.xml  com.solus-project.brisk-menu.gschema.xml  com.solus_project.brisk.BriskMenu.mate-panel-applet.in  com.solus_project.brisk.BriskMenuFactory.service.in  meson.build  org.mate.ScreenSaver.xml  org.mate.panel.applet.BriskMenuFactory.service.in  styling.css
data/dash/: styling-light.css  styling.css
po/: LINGUAS  POTFILES.in  ar.po  brisk-menu.pot  ca.po  ca_ES.po  da_DK.po  de.po  el.po  en_GB.po  es.po  es_419.po  es_AR.po  es_ES.po  es_MX.po  es_US.po  eu.po  fi.po  fr_FR.po  gl_ES.po  he.po  hr_HR.po  hu.po  id_ID.po  it.po  it_IT.po  ja.po  kk.po  lt.po  ne_NP.po  nl_BE.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  ro_RO.po  ru.po  si.po  sk.po  sr_RS.po  (+6 more)
src/: applet.c  applet.h  category-button.c  category-button.h  desktop-button.c  desktop-button.h  entry-button.c  entry-button.h  key-binder.c  key-binder.h  launcher.c  launcher.h  main.c  menu-grabs.c  menu-keyboard.c  menu-loader.c  menu-private.h  menu-search.c  menu-session.c  menu-settings.c  menu-sort.c  menu-window.c  menu-window.h  meson.build  org.gnome.ScreenSaver.xml  org.gnome.SessionManager.xml  util.h
src/backend/: backend.c  backend.h  item.c  item.h  meson.build  section.c  section.h
src/backend/all-items/: all-backend.c  all-backend.h  all-section.c  all-section.h
src/backend/apps/: apps-backend.c  apps-backend.h  apps-item.c  apps-item.h  apps-section.c  apps-section.h
src/backend/favourites/: favourites-backend.c  favourites-backend.h  favourites-desktop.c  favourites-section.c  favourites-section.h
src/frontend/: category-button.c  category-button.h  desktop-button.c  desktop-button.h  entry-button.c  entry-button.h  launcher.c  launcher.h  menu-context.c  menu-grabs.c  menu-keyboard.c  menu-loader.c  menu-private.h  menu-search.c  menu-session.c  menu-settings.c  menu-sort.c  menu-window.c  menu-window.h  meson.build  sidebar-scroller.c  sidebar-scroller.h
src/frontend/classic/: category-button.c  category-button.h  classic-entry-button.c  classic-entry-button.h  classic-window.c  classic-window.h  desktop-button.c  desktop-button.h  sidebar-scroller.c  sidebar-scroller.h
src/frontend/dash/: category-button.c  category-button.h  dash-entry-button.c  dash-entry-button.h  dash-window.c  dash-window.h
src/include/: util.h
src/lib/: authors.h  key-binder.c  key-binder.h  meson.build  styles.h  util.h
src/mate-applet/: applet-position.c  applet.c  applet.h  main.c  meson.build
src/session/: meson.build
src/test/: brisk-test-backends.c
